--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,14 @@
 }
 body {
   font-family: 'Roboto', sans-serif;
+  color: #444;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  color: #111;
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
